# social-utility

./: .gitignore  README.md  config.py  pyproject.toml
app/: __init__.py  extensions.py  messages.py  models.py
app/api/: __init__.py  yt_category.py  yt_subscription.py
app/dto/: yt_category_dto.py  yt_subscription_channel_dto.py
migrations/versions/: 358e2db2c8f4_add_subscription_channel_table.py  a56f3ef13254_add_category_table.py  f48f6a0e5385_create_relationship_between_category_.py
